[package]
name = "caller"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "*", features = ["abigen", "ipc", "rustls", "ws"] }
eyre = "0.6.8"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
hex = "*"
prometheus = "0.13.3"
metrics-exporter-prometheus = { version = "0.12.1" }
metrics = "0.21.0"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.71"
async-trait = "0.1.68"
zksync_types = "0.1"
serde_json = "1.0.96"
